03_liskov_substitution_principle/src/com/talevski/viktor/example/bad/Engine.java
package com.talevski.viktor.example.bad;

public class Engine {
    private String type;

    public String getType() {
        return type;
    }

    public void setType(String type) {
        this.type = type;
    }
}
